--- a/URLShort/ClientApp/src/app/register/register.component.html
+++ b/URLShort/ClientApp/src/app/register/register.component.html
@@ -13,8 +13,8 @@
     <label for="drivingLicense">Driving License:</label>
     <input type="text" id="drivingLicense" formControlName="drivingLicense" required>
 
-    <label for="phone">Phone:</label>
-    <input type="text" id="phone" formControlName="phone" required>
+    <label for="phoneNumber">Phone:</label>
+    <input type="text" id="phoneNumber" formControlName="phoneNumber" required>
 
     <button type="submit">Register</button>
   </form>
