--- a/URLShort/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/URLShort/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,20 +26,21 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/about']">About</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/register']">Register</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
-          </li>
+            <ng-container *ngIf="authService.isAuthenticated; else notAuthenticated">
+            <li class="nav-item">
+              <a class="nav-link text-dark" (click)="logout()">Logout</a>
+            </li>
+          </ng-container>
+          <ng-template #notAuthenticated>
+            <li class="nav-item" [routerLinkActive]="['link-active']">
+              <a class="nav-link text-dark" [routerLink]="['/register']">Register</a>
+            </li>
+            <li class="nav-item" [routerLinkActive]="['link-active']">
+              <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
+            </li>
+          </ng-template>
         </ul>
       </div>
     </div>
