--- a/URLShort/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/URLShort/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,9 +29,9 @@
             <a class="nav-link text-dark" [routerLink]="['/about']">About</a>
           </li>
             <ng-container *ngIf="authService.isAuthenticated; else notAuthenticated">
-            <li class="nav-item">
-              <a class="nav-link text-dark" (click)="logout()">Logout</a>
-            </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" (click)="logout()" [routerLink]="['/']" >Logout</a>
+              </li>
           </ng-container>
           <ng-template #notAuthenticated>
             <li class="nav-item" [routerLinkActive]="['link-active']">
