--- a/URLShort/ClientApp/src/app/about/about.component.html
+++ b/URLShort/ClientApp/src/app/about/about.component.html
@@ -2,6 +2,6 @@
   <div *ngIf="!isEditing" (click)="toggleEdit()">
     <div [innerHTML]="displayText"></div>
   </div>
-  <input [(ngModel)]="editedText" *ngIf="isEditing" />
+  <textarea [(ngModel)]="editedText" *ngIf="isEditing"></textarea>
   <button (click)="toggleEdit()">{{isEditing ? 'Submit' : 'Edit'}}</button>
 </div>
