--- a/URLShort/ClientApp/src/app/home/home.component.html
+++ b/URLShort/ClientApp/src/app/home/home.component.html
@@ -1,39 +1,39 @@
 <h1>Shortened URLs</h1>
 <div *ngIf="authService.isAuthenticated;">
-  <button (click)="showAddUrlForm()">Add URL</button>
+  <button class="action-button" (click)="showAddUrlForm()">Add URL</button>
 </div>
-  <!-- Додана форма для введення нового URL -->
+
+<!-- Form for adding a new URL -->
 <div *ngIf="showForm">
-  <form (ngSubmit)="addUrl()">
+  <form (ngSubmit)="addUrl()" class="add-url-form">
     <label for="originalLink">Original URL:</label>
     <input type="text" id="originalLink" name="originalLink" [(ngModel)]="originalLink" required>
-    <button type="submit">Add</button>
+    <button type="submit" class="action-button">Add</button>
   </form>
 </div>
 
 <div *ngIf="authService.isAuthenticated; else notAuthenticated">
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Original URL</th>
-      <th>Shortened</th>
-      <th  *ngIf="authService.isAdmin;">Delete</th> 
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let link of links">
-      <td><a href="javascript:void(0);" class="info-button" (click)="openLinkInfo(link.id)">{{ link.id }}</a></td>
-      <td>{{ link.originalLink }}</td>
-      <td><a href="javascript:void(0);" (click)="redirectUrl(link.id)">{{ "https://localhost:44305/" + link.shortenedLink }}</a></td>
-      <td *ngIf="authService.isAdmin;"><button class="close-button" (click)="deleteLink(link.id)"></button></td>
-
-    </tr>
-  </tbody>
-</table>
+  <table class="url-table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Original URL</th>
+        <th>Shortened</th>
+        <th *ngIf="authService.isAdmin;">Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let link of links">
+        <td><a href="javascript:void(0);" class="info-button" (click)="openLinkInfo(link.id)">{{ link.id }}</a></td>
+        <td>{{ link.originalLink }}</td>
+        <td><a href="javascript:void(0);" (click)="redirectUrl(link.id)">{{ "https://localhost:44305/" + link.shortenedLink }}</a></td>
+        <td *ngIf="authService.isAdmin;"><button class="close-button" (click)="deleteLink(link.id)">Delete</button></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 <ng-template #notAuthenticated>
-  <table>
+  <table class="url-table">
     <thead>
       <tr>
         <th>ID</th>
@@ -45,9 +45,8 @@
       <tr *ngFor="let link of links">
         <td>{{ link.id }}</td>
         <td>{{ link.originalLink }}</td>
-        <td><a href="javascript:void(0);" (click)="redirectUrl(link.id)">{{"https://localhost:44305/" + link.shortenedLink }}</a></td>
+        <td><a href="javascript:void(0);" (click)="redirectUrl(link.id)">{{ "https://localhost:44305/" + link.shortenedLink }}</a></td>
       </tr>
     </tbody>
   </table>
 </ng-template>
-
