--- a/URLShort/ClientApp/src/app/about/about.component.css
+++ b/URLShort/ClientApp/src/app/about/about.component.css
@@ -1,55 +1,55 @@
-/* about.component.css */
-
-/* Загальні стилі для компоненту */
+/* General component styles */
 :host {
-    display: block;
-    padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Стилі для заголовка */
-  h1 {
-    font-size: 24px;
-    color: #333;
-  }
-  
-  /* Стилі для параграфів */
-  p {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #666;
-    margin-bottom: 15px;
-  }
-  
-  /* Стилі для кнопки */
-  button {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 10px 15px;
-    font-size: 14px;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Стилі для інпуту */
-  textarea {
-    width: 100%;
-    height: 200px;
-    padding: 10px;
-    font-size: 16px;
-    margin-top: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    resize: vertical;
-  }
-  
+  display: block;
+  padding: 20px;
+  background-color: #21201b; /* Darker background for contrast */
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+}
+
+/* Styles for headings */
+h1 {
+  font-size: 24px;
+  color: #f2e090; /* Updated heading color */
+}
+
+/* Styles for paragraphs */
+p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fdf8df; /* Updated text color */
+  margin-bottom: 15px;
+}
+
+/* Button styles */
+button {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 15px;
+  font-size: 14px;
+  color: #2c2a21;
+  background-color: #f2e090; /* Updated button background color */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #f3d861; /* Updated button hover color */
+}
+
+/* Input styles */
+textarea {
+  width: 100%;
+  height: 200px;
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  resize: vertical;
+  background-color: #545144; /* Updated input background color */
+  color: #fdf8df; /* Updated input text color */
+}
