--- a/URLShort/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/URLShort/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,5 @@
 <header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
-  >
+  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">URLShort</a>
       <button
@@ -20,25 +18,23 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+          <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/about']">About</a>
+            <a class="nav-link" [routerLink]="['/about']">About</a>
           </li>
-            <ng-container *ngIf="authService.isAuthenticated; else notAuthenticated">
-              <li class="nav-item">
-                <a class="nav-link text-dark" (click)="logout()" [routerLink]="['/']" >Logout</a>
-              </li>
+          <ng-container *ngIf="authService.isAuthenticated; else notAuthenticated">
+            <li class="nav-item">
+              <a class="nav-link" (click)="logout()" [routerLink]="['/']">Logout</a>
+            </li>
           </ng-container>
           <ng-template #notAuthenticated>
             <li class="nav-item" [routerLinkActive]="['link-active']">
-              <a class="nav-link text-dark" [routerLink]="['/register']">Register</a>
+              <a class="nav-link" [routerLink]="['/register']">Register</a>
             </li>
             <li class="nav-item" [routerLinkActive]="['link-active']">
-              <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
+              <a class="nav-link" [routerLink]="['/login']">Login</a>
             </li>
           </ng-template>
         </ul>
