--- a/URLShort/ClientApp/src/app/register/register.component.css
+++ b/URLShort/ClientApp/src/app/register/register.component.css
@@ -1,41 +1,90 @@
-.error-message {
-  color: red;
-  font-size: 12px;
-}
+/* Main container style */
 .register-container {
   max-width: 400px;
   margin: auto;
+  padding: 2rem;
+  background-color: #21201b;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+  border-radius: 4px;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
 }
 
-/* Style for the form */
+/* Header style */
+.register-container h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #f2e090;
+}
+
+/* Form style */
 .register-form {
   margin-top: 20px;
 }
 
-  /* Style for form labels */
-  .register-form label {
-    display: block;
-    margin-bottom: 8px;
-  }
+/* Label style */
+.register-form label {
+  display: block;
+  margin-bottom: 0.15rem;
+  text-align: left;
+  font-weight: bold;
+  color: #f2e090;
+}
 
-  /* Style for form inputs */
-  .register-form input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-  }
+/* Input style */
+.register-form input {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border:none;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: #545144;
+  color: #fdf8df;
+}
 
-  /* Style for the submit button */
-  .register-form button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-  }
+/* Button style */
+.register-form button {
+  font: inherit;
+  width: 100%;
+  background-color: #f2e090;
+  color: #2c2a21;
+  padding: 12px 15px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
 
-    /* Style for the submit button on hover */
-    .register-form button:hover {
-      background-color: #45a049;
-    }
+/* Button hover effect */
+.register-form button:hover {
+  background-color: #f3d861;
+}
+
+/* Error message style */
+.error-message {
+  color: #dc3545;
+  font-size: 14px;
+  margin-top: -10px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+/* Success message style */
+.success-message {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+/* Focus effect for inputs */
+.register-form input:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.25);
+}
