--- a/URLShort/ClientApp/src/styles.css
+++ b/URLShort/ClientApp/src/styles.css
@@ -1,16 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  color: #e01a76;
+html {
+  font-family: "Open Sans", sans-serif;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+body {
+  margin: 0;
+  background-color: #2d2b24;
+  color: #f5f1e0;
 }
